Interdiff between v2 and v3